<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.fluxx</groupId>
    <artifactId>fluxx</artifactId>
    <version>1.0</version>
    <packaging>war</packaging>
    <name>fluxx</name>

    <properties>
        <commons-lang-version>2.6</commons-lang-version>
        <eclipselink-version>2.2.0-RC3</eclipselink-version>
        <eh-cache-version>2.3.1</eh-cache-version>
        <glassfish-version>3.1-b38</glassfish-version>
        <hibernate-validator-version>4.1.0.Beta1</hibernate-validator-version>
        <javaee-version>6.0</javaee-version>
        <javax-persistence-version>2.0.0</javax-persistence-version>
        <jdom-version>1.0</jdom-version>
        <jsf-version>2.0.2-b10</jsf-version>
        <junit-version>4.8.2</junit-version>
        <mockito-version>1.8.5</mockito-version>
        <mysql-version>5.1.14</mysql-version>
        <rome-version>1.0</rome-version>
        <sl4j-version>1.5.6</sl4j-version>
        <netbeans.hint.deploy.server>gfv3ee6wc</netbeans.hint.deploy.server>
    </properties>

    <profiles>
        <profile>
            <id>production</id>
            <properties>
                <jta-data-source>jdbc/__default</jta-data-source>
                <eclipselink.target-database>MYSQL</eclipselink.target-database>
                <eclipselink.ddl-generation>create-tables</eclipselink.ddl-generation>
                <javax.persistence.jdbc.driver>com.mysql.jdbc.Driver</javax.persistence.jdbc.driver>
                <javax.persistence.jdbc.url>jdbc:mysql://localhost:3306/fluxx</javax.persistence.jdbc.url>
                <javax.persistence.jdbc.user>fluxx_db_user</javax.persistence.jdbc.user>
                <javax.persistence.jdbc.password>fluxx</javax.persistence.jdbc.password>
            </properties>
        </profile>
        <profile>
            <id>integration</id>
            <properties>
                <jta-data-source>jdbc/__integration</jta-data-source>
                <eclipselink.target-database>MYSQL</eclipselink.target-database>
                <eclipselink.ddl-generation>create-tables</eclipselink.ddl-generation>
                <javax.persistence.jdbc.driver>com.mysql.jdbc.Driver</javax.persistence.jdbc.driver>
                <javax.persistence.jdbc.url>jdbc:mysql://localhost:8889/fluxx</javax.persistence.jdbc.url>
                <javax.persistence.jdbc.user>fluxx</javax.persistence.jdbc.user>
                <javax.persistence.jdbc.password>fluxx</javax.persistence.jdbc.password>
            </properties>
        </profile>
        <profile>
            <id>development</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <jta-data-source>jdbc/__default</jta-data-source>
                <eclipselink.target-database>DERBY</eclipselink.target-database>
                <eclipselink.ddl-generation>drop-and-create-tables</eclipselink.ddl-generation>
                <javax.persistence.jdbc.driver>org.apache.derby.jdbc.ClientDriver</javax.persistence.jdbc.driver>
                <javax.persistence.jdbc.url>jdbc:derby://localhost:1527/fluxx;create=true</javax.persistence.jdbc.url>
                <javax.persistence.jdbc.user>APP</javax.persistence.jdbc.user>
                <javax.persistence.jdbc.password>APP</javax.persistence.jdbc.password>
            </properties>
        </profile>
        <profile>
            <id>continuous-integration</id>
            <properties>
                <jta-data-source>jdbc/__default</jta-data-source>
                <eclipselink.target-database>DERBY</eclipselink.target-database>
                <eclipselink.ddl-generation>drop-and-create-tables</eclipselink.ddl-generation>
                <javax.persistence.jdbc.driver>org.apache.derby.jdbc.ClientDriver</javax.persistence.jdbc.driver>
                <javax.persistence.jdbc.url>jdbc:derby://localhost:1527/fluxx;create=true</javax.persistence.jdbc.url>
                <javax.persistence.jdbc.user>sonar</javax.persistence.jdbc.user>
                <javax.persistence.jdbc.password>sonar</javax.persistence.jdbc.password>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
            <version>${mysql-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>net.sf.ehcache</groupId>
            <artifactId>ehcache-core</artifactId>
            <version>${eh-cache-version}</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>${hibernate-validator-version}</version>
        </dependency>
        <dependency>
            <groupId>rome</groupId>
            <artifactId>rome</artifactId>
            <version>${rome-version}</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>${commons-lang-version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>javax.persistence</artifactId>
            <version>${javax-persistence-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.persistence</groupId>
            <artifactId>eclipselink</artifactId>
            <version>${eclipselink-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish</groupId>
            <artifactId>javax.ejb</artifactId>
            <version>${glassfish-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.extras</groupId>
            <artifactId>glassfish-embedded-all</artifactId>
            <version>${glassfish-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax</groupId>
            <artifactId>javaee-api</artifactId>
            <version>${javaee-version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>jdom</groupId>
            <artifactId>jdom</artifactId>
            <version>${jdom-version}</version>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>${mockito-version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${sl4j-version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${sl4j-version}</version>
        </dependency>
        <dependency>
            <groupId>joda-time</groupId>
            <artifactId>joda-time</artifactId>
            <version>1.6.2</version>
        </dependency>
    </dependencies>
    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>com.mycila.maven-license-plugin</groupId>
                <artifactId>maven-license-plugin</artifactId>
                <version>1.8.0</version>
                <configuration>
                    <header>build-tools/licence.txt</header>
                    <strictCheck>true</strictCheck>
                    <useDefaultExcludes>false</useDefaultExcludes>
                    <excludes>
                        <exclude>.gitignore</exclude>
                        <exclude>.git/**</exclude>
                        <exclude>target/**</exclude>
                        <exclude>.settings/**</exclude>
                        <exclude>.project</exclude>
                        <exclude>.classpath</exclude>
                        <exclude>LICENCE</exclude>
                        <exclude>README</exclude>
                        <exclude>**/MANIFEST.MF</exclude>
                        <exclude>sun-appserv-samples/**</exclude>
                        <exclude>derby.log</exclude>
                        <exclude>src/main/webapp/WEB-INF/lib/**</exclude>
                        <exclude>src/main/resources/META-INF/persistence.xml</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <inherited>true</inherited>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <compilerArgument>-Djava.endorsed.dirs=${glassfish-home}/modules/endorsed</compilerArgument>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <failOnMissingWebXml>false</failOnMissingWebXml>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.1</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${endorsed.dir}</outputDirectory>
                            <silent>true</silent>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>javax</groupId>
                                    <artifactId>javaee-endorsed-api</artifactId>
                                    <version>6.0</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
        <finalName>fluxx</finalName>

    </build>

    <repositories>
        <repository>
            <id>fluxx</id>
            <name>fluxx repository</name>
            <url>http://fluxx.fr.cr:9080/nexus/content/groups/public/</url>
        </repository>
        <repository>
            <id>glassfish-maven-repository.dev.java.net</id>
            <name>GlassFish Maven Repository</name>
            <url>http://download.java.net/maven/glassfish</url>
        </repository>
        <repository>
            <id>EclipseLink Repo</id>
            <name>Eclipse maven repository http://eclipse.ialto.org/rt/eclipselink/maven.repo/</name>
            <url>http://mirror.csclub.uwaterloo.ca/eclipse/rt/eclipselink/maven.repo/</url>
        </repository>
        <repository>
            <id>Maven2</id>
            <url>http://repo1.maven.org/maven2</url>
            <name>Maven2</name>
        </repository>
        <repository>
            <id>Maven2 Repo 2</id>
            <url>http://repo2.maven.org/maven2</url>
            <name>Maven2 Repo 2</name>
        </repository>
        <repository>
            <id>JBoss</id>
            <url>http://repository.jboss.com/maven2</url>
            <name>JBoss</name>
        </repository>
        <repository>
            <id>Java</id>
            <url>http://download.java.net/maven/2/</url>
            <name>Java</name>
        </repository>
        <repository>
            <id>sourceforge</id>
            <url>http://oss.sonatype.org/content/groups/sourceforge/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
        </repository>
    </repositories>
</project>
